tests/baselines/reference/implementsClauseAlreadySeen.errors.txt
implementsClauseAlreadySeen.ts(4,22): error TS1175: 'implements' clause already seen.


==== implementsClauseAlreadySeen.ts (1 errors) ====
    class C {
        
    }
    class D implements C implements C {
                         ~~~~~~~~~~
!!! error TS1175: 'implements' clause already seen.
        baz() { }
    }